@@ -219,7 +219,7 @@ classdef const
                 ' in a bug-free code that receives correct inputs.']);
             MAP('IllegalArgument')              = init_struct(1, ...
                 'An argument to an internal function had an illegal value.');
-            MAP('SWMProcessing')             = init_struct(1, ...
+            MAP('SWMProcessing')                = init_struct(1, ...
                 'Error in s/w mode processing (processing datasets).');
             MAP('DatasetFormat')                = init_struct(1, ...
                 ['Error when interpreting (official CDF) input datasets,', ...
@@ -279,7 +279,7 @@ classdef const
                 ' L1 (not L1R) to L2, and BIAS L2 to L3 data', ...
                 ' (both disabled by default).'];
 
-            % 2021-09-21: Latest RCS ICD version is 01/05.
+            % 2023-01-17: Latest RCS ICD version is 01/06
             MAP('SWD.identification.icd_version') = '1.4';
 
             % ROC-GEN-SYS-NTT-00019-LES, "ROC Engineering Guidelines for External
@@ -322,10 +322,17 @@ classdef const
             % (voltages) with transfer functions (partially tested).'
             % /Earlier version
             %
-            % SWD.release.modification = ...
-            % ['Modified default settings: inverted transfer function', ...
-            % ' cutoff at 0.8*omega_Nyquist, duplicate bias current gives error'];
-            % /v3.1.1
+            % ========================
+            % SWD.release.modification
+            % ========================
+            % NOTE: Since BICAS supports some unofficial processing, this
+            % description should maybe not describe modifications related to
+            % such unofficial processing.
+            %   
+%             SWD.release.modification = ...
+%             ['Modified default settings: inverted transfer function', ...
+%             ' cutoff at 0.8*omega_Nyquist, duplicate bias current gives error'];
+%             /v3.1.1
 %             MAP('SWD.release.modification')       = ...
 %                 ['Non-Standard Operations (NSO) table for setting QUALITY_FLAG, L2_QUALITY_BITMASK (new)', ...
 %                 '; Set glob.attr. Datetime, OBS_ID, SOOP_TYPE, TIME_MIN, TIME_MAX', ...
@@ -475,6 +482,9 @@ classdef const
             %       CON: Not if want to be really general, e.g. accounting for
             %            ROC-SGSE/SOLO distinctions.
             % PROPOSAL: Setting L2 and L3 in separate (sub)functions.
+            % PROPOSAL: Test code which reads GA MODS for all DSIs.
+            %   NOTE: Needs global list of DSIs which should probably be the
+            %   same as listed here.
 
             %====================================================
             % Lists of commonly used GROUPS of DSIs
@@ -501,7 +511,7 @@ classdef const
                 'SOLO_L3_RPW-BIA-EFIELD-10-SECONDS', ...
                 'SOLO_L3_RPW-BIA-SCPOT', ...
                 'SOLO_L3_RPW-BIA-SCPOT-10-SECONDS'};
-            % DES = Density+EField+Scpot (not VHT).
+            % DES = Density+EField+Scpot (OSR+DSR; not VHT).
             L3_DES_DSIs = [ ...
                 L3_DENSITY_DSIs, ...
                 L3_EFIELD_SCPOT_DSIs];
@@ -517,11 +527,11 @@ classdef const
             % NOTE: Formal parent dataset(s) might be changed due to
             %       reorganizing SWM, which could change the technically
             %       correct value.
-            DSI_CA = [...
+            ALL_DSI_CA = [...
                 L2_LFR_TDS_DSIs, L3_DSIs ...
                 {'SOLO_L2_RPW-LFR-SURV-CWF-E-1-SECOND'}...
             ]';
-            Gmdb = bicas.gamods.Database(DSI_CA);
+            Gmdb = bicas.gamods.Database(ALL_DSI_CA);
 
             
             
@@ -703,7 +713,7 @@ classdef const
 
 
             % BICAS v7.0.0
-            Gmdb.add_GMVE(DSI_CA, ...
+            Gmdb.add_GMVE(ALL_DSI_CA, ...
                 bicas.gamods.VersionEntry('2023-02-17', '7.0.0', ...
                 {['Updated all CDF skeletons to correct values for', ...
                 ' GAs APPLICABLE and Data_type and correct usage of', ...
